Update client host and port in config.json

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"client": {
-		"host": "KingOGProOG.aternos.me",
-		"port": "45543",
+		"host": "KingOGPro.aternos.me",
+		"port": "22240",
 		"username": "Admin-Helper"
 	},
 	
